--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -48,6 +48,22 @@
   year={2010}
 }
 
+@article{fits1997,
+  title={{A User’s Guide for the Flexible Image Transport System}},
+  author={Schlesinger, B.},
+  year={1997},
+  publisher={Goddard Space Flight Center}
+}
+
+@article{nrc1995,
+  title={{Preserving Scientiﬁc Data on our Physical Universe}},
+  author={National Research Council},
+  year={1995},
+  publisher={National Academy Press}
+}
+
+
+
 
 
 % ------------------------------------------------------------------------
