--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -40,7 +40,7 @@ scientist.
     \ifpdf
     \includegraphics[scale = .8]{astroinformatics}
     \else
-    \includegraphics[bb = 92 86 545 742, height=6in]{architecture}
+    \includegraphics[bb = 92 86 545 742, height=6in]{astroinformatics.png}
     \fi
     \caption{Astroinformatics in the context of astronomy \cite{ballastroinformatics} }
     \label{FigAir}
@@ -56,9 +56,10 @@ science. This is great opportunity for interdisciplinary
 collaboration. 
 
 This work deals with the problem of semi-automatic procedures for
-finding Be stars candidates in the astronomy surveys. More than
-straight forward process it's trail and error approach probing new
-possibilities with rather interesting that useful results.
+finding Be stars \cite{porter2003classical} candidates in the
+astronomy surveys. More than straight forward process it's trail and
+error approach probing new possibilities with rather interesting that
+useful results.
 
 The aim of this work is to be introductory to the technologies of
 Virtual Observatory and Data Mining and for this reason it is intended
@@ -75,22 +76,23 @@ to have following properties:
 
 Chapter one is an introduction to the technologies related to Virtual
 Observatory. The motivation behind the concept is given without paying
-too much attention to historical details. Main standards and protocols
-are discussed and explained. Important aspect are demonstrated on
-numerous examples. Chapter two is an introduction to Machine Learning
-and Data Mining in the context of astrophysics. Only methods used in
-practical part of this work are described in detail: Decision Trees
-and Support Vector Machines. Examples of several classifications are
-demonstrated. Third chapter introduces problematic of Be
-stars. Chapter Four is practical application of previously described
-technologies and methods. Training data of confirmed Be stars from
-Ondrejov are correlated with others catalogues to obtain color indexes
-and spectra. Results are processed by Data Mining algorithms using
-several libraries and tools. In the last chapter achieved results are
-critically discussed.
+too much attention to historical details. Main principles and
+protocols are discussed and explained. Important aspect are
+demonstrated on numerous examples. Chapter two is an introduction to
+Machine Learning and Data Mining in the context of astrophysics. Only
+methods used in practical part of this work are described in detail:
+Decision Trees and Support Vector Machines. Examples of several
+classifications are demonstrated. Third chapter introduces problematic
+of Be stars. Chapter Four is practical application of previously
+described technologies and methods. Training data of confirmed Be
+stars from Ondrejov are correlated with others catalogues to obtain
+color indexes and spectra. Results are processed by Data Mining
+algorithms using several libraries and tools. In the last chapter
+achieved results are critically discussed.
 
-Activities related to this work go beyond this text. Wiki pages were
-created to present the results and discuss related topic with
+Activities related to this work go beyond this text. Wiki
+pages\footnote{\url{http://physics.muni.cz/~vazny/wiki/index.php/Diploma_work}}
+were created to present the results and discuss related topic with
 supervisor as well as with others scientist around the world. Several
 programs were created to analyze and process acquired data. Source
 codes were maintained by GIT version system allowing easy sharing. All
