--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -62,6 +62,24 @@
   publisher={National Academy Press}
 }
 
+@article{porter2003classical,
+  title={{Classical Be Stars}},
+  author={Porter, J.M. and Rivinius, T.},
+  journal={Publications of the Astronomical Society of the Pacific},
+  volume={115},
+  number={812},
+  pages={1153--1170},
+  issn={0004-6280},
+  year={2003}
+}
+
+@article{becla2006designing,
+  title={{Designing a multi-petabyte database for LSST}},
+  author={Becla, J. and Hanushevsky, A. and Nikolaev, S. and Abdulla, G. and Szalay, A. and Nieto-Santisteban, M. and Thakar, A. and Gray, J.},
+  journal={Arxiv preprint cs/0604112},
+  year={2006}
+}
+
 
 
 
