--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -30,7 +30,7 @@
   \collegeordept{Department of Theoretical Physics and Astrophysics}
   \university{Masarykova univerzita}
 % insert below the file name that contains the crest in-place of 'UnivShield'
-  \crest{\includegraphics[bb = 0 0 292 336, width=30mm]{ivoa_logo}}
+  \crest{\includegraphics[bb = 0 0 292 336, width=30mm]{pic/ivoa_logo.png}}
 \fi
 %
 % insert below the file name that contains the crest in-place of 'UnivShield'
