--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -81,6 +81,52 @@
 }
 
 
+@article{wenger2000simbad,
+  title={{The SIMBAD astronomical database}},
+  author={Wenger, M. and Ochsenbein, F. and Egret, D. and Dubois, P. and Bonnarel, F. and Borde, S. and Genova, F. and Jasniewicz, G. and Lalo{\\"e}, S. and Lesteven, S. and others},
+  journal={Arxiv preprint astro-ph/0002110},
+  year={2000}
+}
+
+@article{ball2010data,
+  title={{Data mining and machine learning in astronomy}},
+  author={Ball, N.M. and Brunner, R.J. and Gregory, R.},
+  journal={International Journal of Modern Physics D},
+  volume={19},
+  number={7},
+  pages={1049--1106},
+  issn={0218-2718},
+  year={2010},
+  publisher={World Scientific Publishing Co., Inc., 27 Warren Street Suite 401-402 Hackensack NJ 07601 USA}
+}
+
+@article{kotsiantis2007supervised,
+  title={{Supervised machine learning: A review of classification techniques}},
+  author={Kotsiantis, SB and Zaharakis, ID and Pintelas, PE},
+  journal={Emerging artificial intelligence applications in computer engineering: real word AI systems with applications in eHealth, HCI, information retrieval and pervasive technologies},
+  volume={160},
+  pages={3},
+  isbn={1586037803},
+  year={2007},
+  publisher={Ios Pr Inc}
+}
+
+@book{quinlan1993c4,
+  title={{C4. 5: programs for machine learning}},
+  author={Quinlan, J.R.},
+  isbn={1558602380},
+  year={1993},
+  publisher={Morgan Kaufmann}
+}
+
+@book{witten2005data,
+  title={{Data Mining: Practical machine learning tools and techniques}},
+  author={Witten, I.H. and Frank, E.},
+  isbn={0120884070},
+  year={2005},
+  publisher={Morgan Kaufmann Pub}
+}
+
 
 
 
