--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,3 +1,4 @@
+
 %input macros (i.e. write your own macros file called MacroFile1.tex)
 %\include{Macros/MacroFile1}
 
@@ -117,8 +118,8 @@
 %\fancyhf{}
 
 \include{chapter1}
-%\include{Chapter2/chapter2}
-%\include{Chapter3/chapter3}
+\include{chapter2}
+\include{chapter3}
 %\include{Conclusions/conclusions}
 
 \backmatter % book mode only
