--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -12,25 +12,15 @@
 \renewcommand{\LettrineFontHook}{\color{red}}
 
 
-\lettrine[lines = 3, loversize=-0.1, lraise=0.1]{F}rom the dawn of existence astronomy has always been starved for
-data, but in the last few decades the situation has changed and now we
-are facing the data flood of biblical proportions. The data are not
-just increasing in size but in complexity and
-dimensionality. \cite{ballastroinformatics} Astroinformatics is the
-new field of science which has emerged from this technology driven
-progress.  Virtual Observatory, Machine learning, Data Mining, Grid
-computing are just few examples of new tools available to
-scientist. 
-
-% \begin{wrapfigure}{r}{0.5\textwidth}
-%   \vspace{25pt}
-%   \begin{center}
-%     \includegraphics[width=0.4\textwidth]{astroinformatics}
-%   \end{center}
-%   \vspace{-10pt}
-%    \caption{Astroinformatics in the context of astronomy \cite{ballastroinformatics} }
-%   \vspace{10pt}
-% \end{wrapfigure}
+\lettrine[lines = 3, loversize=-0.1, lraise=0.1]{F}rom the dawn of
+existence astronomy has always been starved for data, but in the last
+few decades the situation has changed and now we are facing the data
+deluge of biblical proportions. The data are not just increasing in
+size but in complexity and dimensionality. \cite{ballastroinformatics}
+Astroinformatics is the new field of science which has emerged from
+this technology driven progress.  Virtual Observatory, Machine
+Learning, Data Mining, Grid Computing are just few examples of new
+tools available to scientist.
 
 
 \vspace{10pt}
@@ -53,7 +43,7 @@ scientist.
 Of course astronomers are not alone and particle physics, biology and
 other sciences are also in the vanguard of the data intensive
 science. This is great opportunity for interdisciplinary
-collaboration. 
+collaboration.
 
 This work deals with the problem of semi-automatic procedures for
 finding Be stars \cite{porter2003classical} candidates in the
@@ -66,8 +56,7 @@ Virtual Observatory and Data Mining and for this reason it is intended
 to have following properties:
 
 \begin{itemize}
-\item Main Chapters starts with questions answered in the text and
-  diagram to ease orietation,
+\item Main Chapters starts with diagram to ease orietation,
 \item is full of examples, 
 \item is non-linear in nature,
 \item is meant to be compact and consistent,
@@ -88,13 +77,46 @@ described technologies and methods. Training data of confirmed Be
 stars from Ondrejov are correlated with others catalogues to obtain
 color indexes and spectra. Results are processed by Data Mining
 algorithms using several libraries and tools. In the last chapter
-achieved results are critically discussed.
+achieved results are critically discussed. 
 
-Activities related to this work go beyond this text. Wiki
+Many scripts were written to achive individual goals. In the text
+there are numerous commented snippets of codes. Their purpose is to
+demonstrate the concept and they are thefore short and without
+auxiliary technicalities such are error handling etc. They are mostly
+Python and shell scripts. Any interested person can obtain the full
+source codes (including thesis itself) from GIT repository at
+\url{git://github.com/astar/diplomaWork}
+
+
+\begin{table}[ht]
+  \centering
+  \small
+     \begin{tabular}[ht]{l l l l}
+     \toprule
+     Name & Input & Output & Description \\
+     \midrule
+     analyse.py & Spectrum & Spectrum & Check the \\
+     getSpectraList.py & List of objects & SSA Compliant list & \\
+     getSpectra.py & SSA Compliant list & Links to spectra & \\
+     getMax.py & Spectrum & List of extracted values & \\
+     reduce.py & Spectrum & Reduced spectrum & \\
+     pf.py & Spectrum & Figure of the spectrum & \\
+     dm.sh & Trainnig and testing sets & List of classified objects & \\ 
+     \bottomrule
+   \end{tabular}
+  \caption{Scripts developed within the scope of the thesis.}
+  \label{tab:scripts}
+\end{table}
+
+
+
+
+
+
+Activities related to this work went beyond this text. Wiki
 pages\footnote{\url{http://physics.muni.cz/~vazny/wiki/index.php/Diploma_work}}
 were created to present the results and discuss related topic with
-supervisor as well as with others scientist around the world. Several
-programs were created to analyze and process acquired data. Source
+supervisor as well as with others scientist around the world. Source
 codes were maintained by GIT version system allowing easy sharing. All
 software used and produced are open source.
 
